Fixed Text Size issue on mobile

--- a/CSS/PW.css
+++ b/CSS/PW.css
@@ -29,7 +29,7 @@
     position: fixed;
     display: inline-flex;
     z-index: 15;
-    bottom: 0%;
+    bottom: 0;
     left: 0;
     margin: 0;
     padding: 0;
