--- a/CSS/Sitemap.css
+++ b/CSS/Sitemap.css
@@ -46,6 +46,11 @@ html, body {
     user-select: none;
     color: white;
     z-index: 10;
+    font-size: 500%;
+}
+
+.header {
+    font-size: 250%;
 }
 
 .link {
@@ -62,6 +67,7 @@ a {
     user-select: all;
     transition-duration: 0.5s;
     z-index: 10;
+    font-size: 100%;
 }
 
 a:link, a:visited {
@@ -72,6 +78,7 @@ a:link, a:visited {
 a:hover {
     color: red;
     text-decoration: underline;
+    font-size: 110%;
 }
 
 /**
